# solvate

./: .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.md  example.ipynb  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  tests.yml
nonmaicos/: __init__.py  _version.py  insert.py  models.py
src/solvate/: __init__.py  insert.py  models.py
tests/: tests.py
